style.css
/* Fonts */
@font-face {
  font-family: 'corleone';
  src: url(./metadata/fonts/corleone/corleone.ttf);
}
@font-face {
  font-family: 'corleoneDue';
  src: url(./metadata/fonts/corleone/corleoneDue.ttf);
}

/* Global Settings */
:root {
  --background: rgba(28, 27, 23, 1.0);
  --text: rgba(206, 203, 200, 1.0);
  --primary: rgba(235, 174, 94, 1.0);
  --primaryTranslucent: rgba(235, 174, 94, 0.69);
  --secondary: rgba(133,76,21, 1.0);
  --secondaryTranslucent: rgba(133,76,21, 0.8);
  --accent: rgba(190, 35, 21, 1.0);
  --accentTranslucent: rgba(190, 35, 21, 0.69);
}

.prevent-select {
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

/* let page take full height of viewport excess */
html {height: 100%;} body {position: absolute; top: 0; bottom: 0; right: 0; left: 0;}

body {
  background-color: var(--background);
  color: var(--text);
  font-family: 'corleone';
  margin: 16px;
}

main {
  border: 2px solid var(--primaryTranslucent);
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Header */
header {
  position: absolute;
  top: 0;
  margin-top: 16px;
  font-size: 52px;
}

/* Main Content */
#main {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

/* Secondary Page */
#tokenomics {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}


/* Footer */
footer {
  position: absolute;
  bottom: 0;
  margin-bottom: 16px;
  display: flex;
  flex-direction: row;
  gap: 16px;
}

#music-widget {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-family: 'corleoneDue';
  font-size: 24px;
  color: var(--text);
  background-color: var(--accentTranslucent);
  padding: 4px 8px;
  cursor: pointer;
}
#music-widget:hover {
  background-color: var(--accent);
}
#music-icon {
  margin-right: 4px;
  height: 24px;
  width: auto;
}

#switch-card {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-family: 'corleoneDue';
  font-size: 24px;
  color: var(--text);
  background-color: var(--secondaryTranslucent);
  padding: 4px 8px;
  border: none;
  cursor: pointer;
}
#switch-card:hover {
  background-color: var(--secondary);
}

/* mobile optimzations */
@media screen and (max-width: 801px) {
  header {
    font-size: 36px;
  }
}

